# LR_153503_Chijov

LR_1/LR_1/: CMakeLists.txt  main.cpp
LR_1/LR_2/: CMakeLists.txt  main.cpp
LR_1/LR_3/: CMakeLists.txt  main.cpp
LR_1/LR_4/: CMakeLists.txt  main.cpp
LR_1/LR_5/: CMakeLists.txt  main.cpp
LR_1/LR_6/: CMakeLists.txt  main.cpp
LR_1/LR_7/: CMakeLists.txt  main.cpp
LR_1/LR_8/: CMakeLists.txt  main.cpp
LR_1/LR_9/: CMakeLists.txt  main.cpp
LR_1/Vadim/: CMakeLists.txt  main.cpp
LR_1/vova/: CMakeLists.txt  main.cpp
LR_5/: CMakeLists.txt  README.md  Tasks.h  functions.cpp  functions.h  main.cpp
LR_5/CMake/: FindstaticLib.cmake
LR_5/Task_1/: CMakeLists.txt  task_1.cpp
LR_5/Task_2/: CMakeLists.txt  task_2.cpp
LR_5/Task_3/: CMakeLists.txt  task_3.cpp
LR_5/Task_4/: CMakeLists.txt  task_4.cpp
LR_5/Task_5/: CMakeLists.txt  task_5.cpp
LR_5/Task_6/: CMakeLists.txt  task_6.cpp
LR_5/Tests/: ClassName.h  test_1.cpp
LR_5/dll/: CMakeLists.txt  library.cpp  library.h
LR_6/: CMakeLists.txt
LR_7/: CMakeLists.txt  Tasks.h  functions.cpp  functions.h  main.cpp
LR_7/Task_1/: CMakeLists.txt  task_1.cpp
LR_7/Task_10/: CMakeLists.txt  task_10.cpp
LR_7/Task_2/: CMakeLists.txt  task_2.cpp
LR_7/Task_3/: CMakeLists.txt  task_3.cpp
LR_7/Task_4/: CMakeLists.txt  task_4.cpp
LR_7/Task_5/: CMakeLists.txt  task_5.cpp
LR_7/Task_6/: CMakeLists.txt  task_6.cpp
LR_7/Task_7/: CMakeLists.txt  task_7.cpp
LR_7/Task_8/: CMakeLists.txt  task_8.cpp
LR_7/Task_9/: CMakeLists.txt  task_9.cpp
LR_8/: CMakeLists.txt  Tasks.h  info.txt  input.txt  main.cpp  output.txt
LR_8/task_1/: CMakeLists.txt  task_1.cpp
LR_8/task_2/: CMakeLists.txt  task_2.cpp
LR_8/task_3/: task_3.cpp  (+1 more)
staticLib/: CMakeLists.txt  library.cpp  library.h
